methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:3: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i <- 1 to 6) {
         ^MethodsReturning:17: error: return outside method definition
    return true
    ^