methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var baggle = false
  for (i <- 1 to 6) {
    avance()
    if (estSurBiscuit())
    	baggle = true
   for (i <-1 to 6)
    recule()
   return baggle
  }
}

var vuBiscuit = false
for (i <- 1 to 6) {
	vuBiscuit=haveBaggle()
	if (vuBiscuit)	
		return true
	else {
    droite()
    avance()
    gauche()
  }
}